[gd_scene load_steps=5 format=3 uid="uid://ds1nj30vqe7uq"]

[ext_resource type="Script" path="res://Scripts/Tablet/Scripts/HackingNode.gd" id="1_w46d6"]
[ext_resource type="Texture2D" uid="uid://dxlpddiwqix4e" path="res://UI/Sprites/CashNode.png" id="2_67nnv"]
[ext_resource type="FontFile" uid="uid://c7hvpemedctnn" path="res://UI/Fonts/LCDMonoWinTT/LCDM2B__.TTF" id="3_1574b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_18do3"]
radius = 28.0179

[node name="HackingNode" type="Area2D"]
script = ExtResource("1_w46d6")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.125, 0.125)
texture = ExtResource("2_67nnv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_18do3")

[node name="reward_text" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(150, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -9.0
offset_right = 74.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 0.0392157, 1)
theme_override_fonts/normal_font = ExtResource("3_1574b")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
fit_content = true
scroll_following = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
